Completely new base

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,17 +1,24 @@
-// These colors are specific to the theme. Do not use in a package!
+// Background/Foreground Tones
+@base03: #161925;
+@base02: #1e2233;
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
-@gray: #373b41;
-@dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
+// Content Tones
+@base00: #666a73;
+@base01: #595D66;
+@base0: #d3dae3;
+@base1: #e0e7f0;
 
-@cyan: #1abc9c;
-@blue: #3498db;
-@purple: #6c71c4;
-@green: #2ecc71;
-@red: #e74c3c;
-@orange: #e67e22;
-@light-orange: #f0c674;
-@yellow: #f1c40f;
-@magenta: #9b59b6;
+// Background/Foreground Tones
+@base2: #C6CFCC;
+@base3: #d3dae3;
+
+// Accent Colors
+@yellow: #fdbc4b;
+@orange: #ff6a00;
+@red: #ed254e;
+@purple: #aa00ff;
+@magenta: #c50ed2;
+@violet: #aa00ff;
+@blue: #5294e2;
+@cyan: #00c1e4;
+@green: #71f79f;
