--- a/index.less
+++ b/index.less
@@ -1,1 +1,18 @@
-@import "./styles/base.less";
+
+// Lazarus Syntax Theme
+
+@import "styles/syntax-variables.less";
+
+// Editor
+@import "styles/editor.less";
+
+// Languages
+@import "styles/syntax/_base.less";
+@import "styles/syntax/c.less";
+@import "styles/syntax/css.less";
+@import "styles/syntax/html.less";
+@import "styles/syntax/java.less";
+@import "styles/syntax/javascript.less";
+@import "styles/syntax/markdown.less";
+@import "styles/syntax/markup.less";
+@import "styles/syntax/python.less";
