--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,31 +1,52 @@
-@import "colors";
+@import "colors.less";
 
 // This defines all syntax variables that syntax themes must implement when they
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @very-light-gray;
-@syntax-cursor-color: white;
-@syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @very-dark-gray;
+@syntax-text-color: @base0;
+@syntax-cursor-color: @cyan;
+@syntax-selection-color: darken(@magenta, 25%);
+@syntax-selection-flash-color: @base1;
+@syntax-background-color: @base03;
 
 // Guide colors
-@syntax-wrap-guide-color: @dark-gray;
-@syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-indent-guide-color: @base02;
+@syntax-invisible-character-color: darken(@base00, 15%);
 
 // For find and replace markers
-@syntax-result-marker-color: @light-gray;
-@syntax-result-marker-color-selected: white;
+@syntax-result-marker-color: @cyan;
+@syntax-result-marker-color-selected: @base3;
 
 // Gutter colors
-@syntax-gutter-text-color: @very-light-gray;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+@syntax-gutter-text-color: @base0;
+@syntax-gutter-text-color-selected: @base02;
+@syntax-gutter-background-color: @base02;
+@syntax-gutter-background-color-selected: lighten(@base02, 10%);
 
 // For git diff info. i.e. in the gutter
-@syntax-color-renamed: @blue;
 @syntax-color-added: @green;
-@syntax-color-modified: @orange;
+@syntax-color-renamed: @blue;
+@syntax-color-modified: @yellow;
 @syntax-color-removed: @red;
+
+// For language entity colors
+@syntax-color-variable: @blue;
+@syntax-color-constant: @yellow;
+@syntax-color-property: @yellow;
+@syntax-color-value: @cyan;
+@syntax-color-function: @violet;
+@syntax-color-method: @violet;
+@syntax-color-class: @violet;
+@syntax-color-keyword: @green;
+@syntax-color-tag: @blue;
+@syntax-color-attribute: @syntax-comment-color;
+@syntax-color-import: @red;
+@syntax-color-snippet: @syntax-color-keyword;
+
+// Custom variables
+// Warning: Don't use in packages
+
+@syntax-comment-color: @base00;
+@syntax-subtle-color: @base01;
+@syntax-emphasized-color: @base1;
